<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings_date"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings_date"/>
     <item
        android:id="@+id/menu_settings_location"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings_location"/>
    <item
        android:id="@+id/menu_settings_info"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings_info"/>
    <item
        android:id="@+id/menu_settings_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings_about"/>
</menu>