<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:minWidth="300dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imgAboutA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/moon_phases_btn_ico" />

        <TextView
            android:id="@+id/txtAboutA"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_a"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/txtAboutB"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_b"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/textAboutC"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_c"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</ScrollView>